General: Fix wordbreak on expired page
Prevents single word letter spam from pushing table under sidebar (excerpt column)

--- a/src/css/General.css
+++ b/src/css/General.css
@@ -456,3 +456,7 @@ select {
   word-break: break-word;
   margin-bottom: 15px; /* unrelated to issue #90 */
 }
+td.teaser-col {
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
